# agentic-trip-planner

./: .pre-commit-config.yaml  pyproject.toml  ruff.toml
.github/workflows/: Lint.yml  lint.yaml.yml
agents/: config.py  custom_agents.py  tools.py
agents/prompts/: prompt_attraction_search.md  prompt_coordinator.md  prompt_coordinator_attr_flights.md  prompt_flight_search.md
backend/: main.py
frontend/: app.js  index.html  style.css
