[project]
name = "holidayplanner"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.135.1",
    "pydantic-settings>=2.0.0",
    "langchain>=1.2.10",
    "langchain-nvidia-ai-endpoints>=1.1.0",
    "tavily>=1.1.0",
    "uvicorn>=0.41.0",
    "asyncio>=4.0.0",
    "langchain-mcp-adapters>=0.2.1",
    "pre-commit>=4.5.1",
]

[dependency-groups]
dev = [
    "ruff>=0.15.4",
]
